43-dev-pvlib-agent: Modify README and ts_client.properties

--- a/Agents/PVLibAgent/resources/ts_client.properties
+++ b/Agents/PVLibAgent/resources/ts_client.properties
@@ -1,7 +1,7 @@
 ###--- Properties for JAVA TimeSeriesClient ---###
 
 # URL to connect to PostgreSQL database for querying
-db.query.url = jdbc:postgresql://host.docker.internal:5432/sensor
+db.query.url = jdbc:postgresql://host.docker.internal:5432/sensorTimeSeries
 
 # Username to connect to PostgreSQL database
 db.query.user = postgres
@@ -19,12 +19,11 @@ db.update.user = postgres
 db.update.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store (also required by Java TimeSeriesClient)
-sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/sensor/sparql
-
+sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespaces/weatherstation/sparql
 
 sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/test/sparql
 
-# iri of sensor or weather station entity that has rdf:type sensor or rdf:type ontoems:ReportingStation, can be left blank
+# iri of sensor or weather station entity that has rdf:type s3n:SmartSensor or rdf:type ontoems:ReportingStation, can be left blank, iri have to be encapsulated by <>
 iri = 
 
 
