160-dev-rxn-opt-goal-agent: [RxnOptGoalAgent] added rxnoptgoaliteragent package as dependencies of rxnoptgoalagent.

--- a/Agents/RxnOptGoalAgent/requirements.txt
+++ b/Agents/RxnOptGoalAgent/requirements.txt
@@ -3,6 +3,7 @@
 #######################################
 pyderivationagent==1.4.1
 chemistry_and_robots==1.2.1
+rxnoptgoaliteragent==0.0.1
 
 ##########################
 ## Third-party packages ##
