--- a/Agents/RxnOptGoalAgent/docker-compose-test-dockerised.yml
+++ b/Agents/RxnOptGoalAgent/docker-compose-test-dockerised.yml
@@ -1,6 +1,36 @@
 version: "3.8"
 
 services:
+  rxn_opt_goal_agent:
+    image: ghcr.io/cambridge-cares/rxn_opt_goal_agent:1.0.0-SNAPSHOT
+    container_name: rxn_opt_goal_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+      EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
+    ports:
+      - 7070:5000
+    env_file:
+      - ./tests/env_files/agent.goal.env.test
+    secrets:
+      - email_auth
+    extra_hosts:
+      - host.docker.internal:host-gateway
+
+  rxn_opt_goal_iter_agent:
+    image: ghcr.io/cambridge-cares/rxn_opt_goal_iter_agent:1.0.0-SNAPSHOT
+    container_name: rxn_opt_goal_iter_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+      EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
+    ports:
+      - 7060:5000
+    env_file:
+      - ./tests/env_files/agent.goal.iter.env.test
+    secrets:
+      - email_auth
+    extra_hosts:
+      - host.docker.internal:host-gateway
+
   doe_agent:
     image: ghcr.io/cambridge-cares/doe_agent:1.0.0-SNAPSHOT
     container_name: doe_agent
@@ -11,8 +41,10 @@ services:
       - 7000:5000
     env_file:
       - ./tests/env_files/agent.doe.env.test
+    secrets:
+      - email_auth
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
 
   vapourtec_schedule_agent:
     image: ghcr.io/cambridge-cares/vapourtec_schedule_agent:1.0.0-SNAPSHOT
@@ -23,9 +55,11 @@ services:
     ports:
       - 7001:5000
     env_file:
-      - ./tests/env_files/agent.vapourtec.execution.env.test
+      - ./tests/env_files/agent.vapourtec.schedule.env.test
+    secrets:
+      - email_auth
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
 
   hplc_postpro_agent:
     image: ghcr.io/cambridge-cares/hplc_postpro_agent:1.0.0-SNAPSHOT
@@ -37,8 +71,10 @@ services:
       - 7002:5000
     env_file:
       - ./tests/env_files/agent.hplc.postpro.env.test
+    secrets:
+      - email_auth
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
 
   vapourtec_agent:
     image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
@@ -48,11 +84,15 @@ services:
       EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
     ports:
       - 7003:5000
-    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
-      - localhost:host-gateway
+    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "host.docker.internal"
+      - host.docker.internal:host-gateway
     env_file:
-      - ./tests/env_files/agent.vapourtec.env.test
+      - ./tests/env_files/agent.lab2.vapourtec.env.test
+    secrets:
+      - email_auth
     volumes:
+      - ./FCRemote.dll:/app/FCRemote.dll
+      - ./FCRemoteCSV.dll:/app/FCRemoteCSV.dll
       - type: bind
         source: ./tests/_for_docker_integration_test
         target: /app/vapourtec
@@ -66,9 +106,11 @@ services:
     ports:
       - 7004:5000
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
     env_file:
-      - ./tests/env_files/agent.hplc.env.test
+      - ./tests/env_files/agent.lab2.hplc.env.test
+    secrets:
+      - email_auth
     volumes:
       - type: bind
         source: ./tests/_for_docker_integration_test
@@ -77,7 +119,7 @@ services:
   # Blazegraph
   blazegraph:
     image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
-    container_name: "blazegraph_test"
+    container_name: "blazegraph_all_agents_test"
     ports:
       - 48082:8080
     environment:
@@ -89,7 +131,7 @@ services:
   # File server
   fileserver:
     image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
-    container_name: "fileserver_test"
+    container_name: "fileserver_all_agents_test"
     ports:
       - 48086:8080
     # Add secret to set BASIC authentication password
