--- a/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-manager:
-    image: docker.cmclinnovations.com/stack-manager:1.5.6-dev-sparql-service-filter-SNAPSHOT
+    image: docker.cmclinnovations.com/stack-manager:1.5.6
     environment:
       EXTERNAL_PORT: "${EXTERNAL_PORT-3838}"
     volumes:
