272-ability-to-upload-triples-through-the-stack-data-uploader: Fixed ability to run the stack-clients' Docker container (should only be used for testing),

--- a/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
@@ -3,6 +3,8 @@ services:
   stack-client:
     image: docker.cmclinnovations.com/stack-client${IMAGE_SUFFIX}:1.6.0-272-SNAPSHOT
     configs:
+      - blazegraph
+      - ontop
       - postgis
       - geoserver
     secrets:
