196-dev-AverageSquareMetrePriceAgent-update: adapted the design of having both setup.py and requirements.txt file; also updated pyderivationagent and py4jps version number to their latest versions.

--- a/Agents/AverageSquareMetrePriceAgent/requirements.txt
+++ b/Agents/AverageSquareMetrePriceAgent/requirements.txt
@@ -1,2 +1,13 @@
-# define agent logging dependency here as there are issues including it in install_requires in setup.py
-git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
+#######################################
+## The World Avatar related packages ##
+#######################################
+pyderivationagent==1.4.1
+py4jps==1.0.29
+
+##########################
+## Third-party packages ##
+##########################
+flask==2.1.0
+JayDeBeApi==1.2.3
+pandas==1.5.1
+requests==2.28.1
