--- a/Agents/PropertyValueEstimationAgent/Dockerfile
+++ b/Agents/PropertyValueEstimationAgent/Dockerfile
@@ -132,3 +132,30 @@ CMD gunicorn --bind 0.0.0.0:5000 "${AGENTDIR}:create_app()" & pytest
 
 
 #==================================================================================================
+
+# TODO - delete this image when doing KL properly
+#------------------------------------------------------
+# Derivation mvp image reusing the base
+#------------------------------------------------------
+FROM base as derivation_mvp
+# Install additional dependencies
+RUN pip install gunicorn
+
+# Copy required source code (as code is not attached as volume)
+WORKDIR /app
+COPY ./$AGENTDIR ./$AGENTDIR
+
+# Adjust logging level
+RUN sed -i "s|logger_name='prod'|logger_name='dev' |g" ./$AGENTDIR/entry_point.py
+
+# Overwrite/Mock all stack interactions with pre-defined settings from testing Docker stack
+COPY ./_derivation_mvp_mock/env_configs_mock.py ./$AGENTDIR/utils/env_configs.py
+COPY ./_derivation_mvp_mock/stack_configs_mock.py ./$AGENTDIR/utils/stack_configs.py
+# Adjust relative import statement
+RUN sed -i "s|env_configs_mock|env_configs |g" ./$AGENTDIR/utils/stack_configs.py
+
+# Set the entrypoint
+# --preload flag is added to provide more information in the container to help with debugging
+ENTRYPOINT gunicorn --bind 0.0.0.0:5000 "${AGENTDIR}:create_app()" --preload
+
+#==================================================================================================
