--- a/Agents/ForecastingAgent/resources/timeseries.properties
+++ b/Agents/ForecastingAgent/resources/timeseries.properties
@@ -3,9 +3,11 @@
 # 172.17.0.1 is the default host IP seen from the container and can be used to access services running on the host (Linux).
 # On Docker for Mac or Windows host.docker.internal should work instead.
 
-# URL to connect to PostgreSQL database
+###--- URL to connect to PostgreSQL database ---###
 # For local script deployment with Postgres running via docker-compose
-db.url = jdbc:postgresql://localhost:9432/districtheating
+db.url = jdbc:postgresql://localhost:9431/fc_agent_test
+#jdbc:postgresql://localhost:9432/districtheating
+
 # For script deployment in Docker with access to local Postgres
 #db.url = jdbc:postgresql://host.docker.internal:5432/districtheating
 # For script deployment in Docker with Postgres running in same Docker stack
@@ -18,10 +20,13 @@ db.user = postgres
 # Password to connect to PostgreSQL database (according to Docker compose info)
 db.password = postgres
 
-# Full SPARQL Query and Update endpoints of triple store
+###--- Full SPARQL Query and Update endpoints of triple store ---###
 # For local script deployment with Blazegraph running via docker-compose
-sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/districtheating/sparql
-sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/districtheating/sparql
+sparql.query.endpoint = http://localhost:9998/blazegraph/namespace/fc_agent_test/sparql
+sparql.update.endpoint = http://localhost:9998/blazegraph/namespace/fc_agent_test/sparql 
+# http://localhost:9999/blazegraph/namespace/districtheating/sparql
+
+
 # For script deployment in Docker with access to local Blazegraph
 #sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/districtheating/sparql
 #sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/districtheating/sparql
