--- a/Agents/MoDSSimpleAgent/docker-compose.yml
+++ b/Agents/MoDSSimpleAgent/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   modssimpleagent:
-    image: docker.cmclinnovations.com/modssimpleagent:0.2.0-dev-mods-agent-evaluating-surrogates-SNAPSHOT
+    image: docker.cmclinnovations.com/modssimpleagent:0.2.0
     build: .
     container_name: modssimpleagent
     environment:
