--- a/Agents/ElectricityConsumptionAgent/requirements.txt
+++ b/Agents/ElectricityConsumptionAgent/requirements.txt
@@ -1,2 +1,9 @@
+py4jps
+tqdm
+numpy
+pandas
+tabulate
+uuid
+datetime
 # define agent logging dependency here as there are issues including it in install_requires in setup.py
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
