--- a/Agents/_DerivationPaper/docker-compose-agents.yml
+++ b/Agents/_DerivationPaper/docker-compose-agents.yml
@@ -24,3 +24,15 @@ services:
       # this file contains the environment variables for derivation agent parameters
       - ./env_files/agent.propertyvalue.env
     entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "propertyvalueestimation:create_app()", "--preload"]
+
+  floodassessment_agent_deriv_mvp:
+    image: ghcr.io/cambridge-cares/floodassessment_agent_deriv_mvp:1.0.0-SNAPSHOT
+    container_name: floodassessment_agent_deriv_mvp
+    ports:
+      - "5012:5000"
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    env_file:
+      # this file contains the environment variables for derivation agent parameters
+      - ./env_files/agent.floodassessment.env
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "floodassessment:create_app()", "--preload"]
